[chore] add logtail source token var in env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -2,5 +2,7 @@
 AUTH_PRIVATE_KEY=
 # private key used to sign transactions sent to mev-share
 SENDER_PRIVATE_KEY=
-# vanilla Ethereum RPC endpoint (HTTP only)
+# vanilla Ethereum RPC endpoint
 PROVIDER_URL=
+# Logtail Source Token
+LOGTAIL_SOURCE_TOKEN=
