--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "scraper": "ts-node src/scraper.ts",
+    "capture": "ts-node src/capture.ts",
+    "history": "ts-node src/history.ts",
+    "listener": "ts-node src/listener.ts",
     "send-tx": "ts-node src/sendTx.ts",
+    "send-bundle": "ts-node src/sendBundle.ts",
     "backrun": "ts-node src/backrun.ts",
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -41,7 +44,6 @@
   },
   "dependencies": {
     "@flashbots/mev-share-client": "^0.7.6",
-    "@logtail/node": "^0.4.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.6.7"
   }
