--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "test": "jest",
-    "test:dev": "jest --watchAll"
+    "test:dev": "jest --watchAll",
+    "ts": "ts-node"
   },
   "husky": {
     "hooks": {
