--- a/src/.env.example
+++ b/src/.env.example
@@ -4,3 +4,5 @@ AUTH_PRIVATE_KEY=
 SENDER_PRIVATE_KEY=
 # vanilla Ethereum RPC endpoint
 PROVIDER_URL=
+# vanilla Ethereum WSS endpoint
+WSS_PROVIDER_URL=
