--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rimraf ./build && tsc",
     "ctf:simple": "ts-node src/ctf-simple.ts",
     "ctf:magic-v1": "ts-node src/ctf-magic-v1.ts",
+    "ctf:magic-v2": "ts-node src/ctf-magic-v2.ts",
     "capture": "ts-node src/capture.ts",
     "history": "ts-node src/history.ts",
     "listener": "ts-node src/listener.ts",
