--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ctf:magic-v2": "ts-node src/ctf-magic-v2.ts",
     "ctf:magic-v3": "ts-node src/ctf-magic-v3.ts",
     "ctf:new-contract": "ts-node src/ctf-new-contract.ts",
+    "ctf:triple": "ts-node src/ctf-triple.ts",
     "capture": "ts-node src/capture.ts",
     "history": "ts-node src/history.ts",
     "listener": "ts-node src/listener.ts",
