--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tinyhunter",
+  "name": "tinyhunter-flashbots-ctf",
   "version": "1.0.0",
-  "description": "A tiny framework to run a MEV searcher for Flashbots mev-share on Goerli network",
+  "description": "A tiny framework to solve all the Flashbots CTF challenges",
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
@@ -11,12 +11,7 @@
     "ctf:magic-v3": "ts-node src/ctf-magic-v3.ts",
     "ctf:new-contract": "ts-node src/ctf-new-contract.ts",
     "ctf:triple": "ts-node src/ctf-triple.ts",
-    "capture": "ts-node src/capture.ts",
-    "history": "ts-node src/history.ts",
     "listener": "ts-node src/listener.ts",
-    "send-tx": "ts-node src/sendTx.ts",
-    "send-bundle": "ts-node src/sendBundle.ts",
-    "backrun": "ts-node src/backrun.ts",
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
